# f1-time-machine

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  article.py  bot_subscriber.py  circuit.py  constructor.py  day.py  driver.py  event.py  penalty.py  quote.py  race.py  result.py  season.py  season_entry.py  session.py  standing.py  status.py  tag.py
backend/app/routers/: __init__.py  admin.py  articles.py  constructors.py  customize.py  days.py  drivers.py  events.py  head_to_head.py  penalties.py  quotes.py  races.py  results.py  seasons.py  standings.py
backend/app/schemas/: __init__.py  article.py  common.py  constructor.py  day.py  driver.py  event.py  penalty.py  quote.py  race.py  result.py  season.py  session.py  standing.py
backend/app/services/: __init__.py  day_service.py  race_service.py  standings_service.py
backend/app/utils/: __init__.py  date_helpers.py  formatting.py
backend/tests/: conftest.py
bot/: .env.example  .gitignore  Dockerfile  README.md  requirements.txt
bot/bot/: __init__.py  config.py  main.py
bot/tests/: __init__.py  conftest.py
data/curated/: events_2010_custom.json  events_2026_custom.json  penalties_2010.json  quotes_2010.json  season_entries_2026.json  testing_2026_bahrain_t1.json  testing_2026_bahrain_t2.json
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+124 files in other folders)
